--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -579,12 +579,11 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
 }
 ```
 
-`vmstate_register_ram_global`这个函数则是负责将前面提到的ramlist中的**ramblock**和**memory region**的初始地址对应一下，将mr->name填充到ramblock的idstr里面，就是让二者有确定的对应关系，如此mr就有了物理内存使用。
-
+`vmstate_register_ram_global`这个函数则是负责将前面提到的ramlist中的**ramblock**和**memory region**的初始地址对应一下，将`mr->name`填充到ramblock的**idstr**里面，就是让二者有确定的对应关系，如此**mr**就有了**物理内存**使用。
 
 ## 划分为两个子MR
 
-经过上面的初始化，我们得到一个完整的ram，下面的`vmstate_register_ram_global`仅仅是把**MR的名字**设置到**对应的block**中。此为**全局的MR**，根据`ram_below_4g`和`ram_above_4g`，**全局的MR**被划分为两部分，形成**两个子MR**。
+此为**全局的MR**，根据`ram_below_4g`和`ram_above_4g`，**全局的MR**被划分为两部分，形成**两个子MR**。
 
 `memory_region_init_alias()`函数便对两个子MR进行初始化，这里就**不再进行内存的申请**，主要是设置`alias`和`alias_offset`字段，代码如下。
 
