--- a/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/3. memory/2. 主要结构体分析.md
@@ -233,6 +233,7 @@ struct RAMBlock {
     void (*resized)(const char*, uint64_t length, void *host);
     uint32_t flags;
     /* Protected by iothread lock.  */
+    /* 这里会被填充成mr的name */
     char idstr[256];    //RAMBlock的ID
     /* RCU-enabled, writes protected by the ramlist lock */
     // 全局链表
