--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -7,10 +7,10 @@
 - [回调函数的注册](#回调函数的注册)
 - [全局的系统AS和MR的初始化: 不分配GPA/HVA](#全局的系统as和mr的初始化-不分配gpahva)
 - [实际内存的分配GPA/HVA](#实际内存的分配gpahva)
-  - [分配全局RAM](#分配全局ram)
+  - [分配整体内存全局MR(ram)](#分配整体内存全局mrram)
     - [memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
     - [vmstate_register_ram_global(): ramblock与mr关联](#vmstate_register_ram_global-ramblock与mr关联)
-  - [划分为两个子MR](#划分为两个子mr)
+  - [将整体mr(ram)划分为两个子MR](#将整体mrram划分为两个子mr)
 - [](#)
 - [参考](#参考)
 
@@ -168,76 +168,6 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 我们直接从`pc_memory_init()`函数开始
 
 ```cpp
-FWCfgState *pc_memory_init(MemoryRegion *system_memory,
-                           const char *kernel_filename,
-                           const char *kernel_cmdline,
-                           const char *initrd_filename,
-                           ram_addr_t below_4g_mem_size,
-                           ram_addr_t above_4g_mem_size,
-                           MemoryRegion *rom_memory,
-                           MemoryRegion **ram_memory,
-                           PcGuestInfo *guest_info)
-{
-    int linux_boot, i;
-    MemoryRegion *ram, *option_rom_mr;
-    MemoryRegion *ram_below_4g, *ram_above_4g;
-    FWCfgState *fw_cfg;
-
-    linux_boot = (kernel_filename != NULL);
-
-    /* Allocate RAM.  We allocate it as a single memory region and use
-     * aliases to address portions of it, mostly for backwards compatibility
-     * with older qemus that used qemu_ram_alloc().
-     */
-    ram = g_malloc(sizeof(*ram));
-    //分配具体的内存
-    memory_region_init_ram(ram, NULL, "pc.ram",
-                           below_4g_mem_size + above_4g_mem_size);
-    //那mr中的name设置进block
-    vmstate_register_ram_global(ram);
-    *ram_memory = ram;
-    ram_below_4g = g_malloc(sizeof(*ram_below_4g));
-    /*对整体ram进行划分*/
-    memory_region_init_alias(ram_below_4g, NULL, "ram-below-4g", ram,
-                             0, below_4g_mem_size);
-    /******/
-    memory_region_add_subregion(system_memory, 0, ram_below_4g);
-    e820_add_entry(0, below_4g_mem_size, E820_RAM);
-    if (above_4g_mem_size > 0) {
-        ram_above_4g = g_malloc(sizeof(*ram_above_4g));
-        memory_region_init_alias(ram_above_4g, NULL, "ram-above-4g", ram,
-                                 below_4g_mem_size, above_4g_mem_size);
-        memory_region_add_subregion(system_memory, 0x100000000ULL,
-                                    ram_above_4g);
-        e820_add_entry(0x100000000ULL, above_4g_mem_size, E820_RAM);
-    }
-
-
-    /* Initialize PC system firmware */
-    pc_system_firmware_init(rom_memory, guest_info->isapc_ram_fw);
-
-    option_rom_mr = g_malloc(sizeof(*option_rom_mr));
-    memory_region_init_ram(option_rom_mr, NULL, "pc.rom", PC_ROM_SIZE);
-    vmstate_register_ram_global(option_rom_mr);
-    memory_region_add_subregion_overlap(rom_memory,
-                                        PC_ROM_MIN_VGA,
-                                        option_rom_mr,
-                                        1);
-
-    fw_cfg = bochs_bios_init();
-    rom_set_fw(fw_cfg);
-
-    if (linux_boot) {
-        load_linux(fw_cfg, kernel_filename, initrd_filename, kernel_cmdline, below_4g_mem_size);
-    }
-
-    for (i = 0; i < nb_option_roms; i++) {
-        rom_add_option(option_rom[i].name, option_rom[i].bootindex);
-    }
-    guest_info->fw_cfg = fw_cfg;
-    return fw_cfg;
-}
-
 void pc_memory_init(PCMachineState *pcms,
                     MemoryRegion *system_memory,
                     MemoryRegion *rom_memory,
@@ -261,13 +191,14 @@ void pc_memory_init(PCMachineState *pcms,
      * aliases to address portions of it, mostly for backwards compatibility
      * with older qemus that used qemu_ram_alloc().
      */
-    /* 分配新的MR */
+    /* 分配新的整体MR */
     ram = g_malloc(sizeof(*ram));
-    /* 根据虚拟机内存大小初始化MR, 为其分配内存 */
+    /* 根据虚拟机内存大小初始化MR, 为其分配具体的内存, 将mr->name设进block */
     memory_region_allocate_system_memory(ram, NULL, "pc.ram",
                                          machine->ram_size);
     *ram_memory = ram;
     ram_below_4g = g_malloc(sizeof(*ram_below_4g));
+    // 对前面的整体mr进行划分
     memory_region_init_alias(ram_below_4g, NULL, "ram-below-4g", ram,
                              0, x86ms->below_4g_mem_size);
     memory_region_add_subregion(system_memory, 0, ram_below_4g);
@@ -388,7 +319,7 @@ void pc_memory_init(PCMachineState *pcms,
 
 3. 最后需要调用`memory_region_transaction_commit()`函数提交修改。
 
-## 分配全局RAM
+## 分配整体内存全局MR(ram)
 
 为虚拟机内存"pc.ram"和"pc.rom"都分别生成了新的MR, 然后分配内存, 这里看"pc.ram"的内存分配`memory_region_allocate_system_memory(ram, NULL, "pc.ram", machine->ram_size);`, 对于非大页最终会调用到函数`memory_region_init_ram_shared_nomigrate()`
 
@@ -581,7 +512,7 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
 
 `vmstate_register_ram_global`这个函数则是负责将前面提到的ramlist中的**ramblock**和**memory region**的初始地址对应一下，将`mr->name`填充到ramblock的**idstr**里面，就是让二者有确定的对应关系，如此**mr**就有了**物理内存**使用。
 
-## 划分为两个子MR
+## 将整体mr(ram)划分为两个子MR
 
 此为**全局的MR**，根据`ram_below_4g`和`ram_above_4g`，**全局的MR**被划分为两部分，形成**两个子MR**。
 
