--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -10,7 +10,7 @@
   - [分配整体内存全局MR(ram)](#分配整体内存全局mrram)
     - [memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
     - [vmstate_register_ram_global(): ramblock与mr关联](#vmstate_register_ram_global-ramblock与mr关联)
-  - [将整体mr(ram)划分为两个子MR](#将整体mrram划分为两个子mr)
+  - [将整体mr(ram)划分为两个子MR(subregion)](#将整体mrram划分为两个子mrsubregion)
 - [](#)
 - [参考](#参考)
 
@@ -201,6 +201,7 @@ void pc_memory_init(PCMachineState *pcms,
     // 对前面的整体mr进行划分
     memory_region_init_alias(ram_below_4g, NULL, "ram-below-4g", ram,
                              0, x86ms->below_4g_mem_size);
+    // 将mr(ram_below_4g)加入全局mr(system_memory)的子mr
     memory_region_add_subregion(system_memory, 0, ram_below_4g);
     e820_add_entry(0, x86ms->below_4g_mem_size, E820_RAM);
     if (x86ms->above_4g_mem_size > 0) {
@@ -512,7 +513,7 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
 
 `vmstate_register_ram_global`这个函数则是负责将前面提到的ramlist中的**ramblock**和**memory region**的初始地址对应一下，将`mr->name`填充到ramblock的**idstr**里面，就是让二者有确定的对应关系，如此**mr**就有了**物理内存**使用。
 
-## 将整体mr(ram)划分为两个子MR
+## 将整体mr(ram)划分为两个子MR(subregion)
 
 此为**全局的MR**，根据`ram_below_4g`和`ram_above_4g`，**全局的MR**被划分为两部分，形成**两个子MR**。
 
