--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -198,7 +198,7 @@ void pc_memory_init(PCMachineState *pcms,
                                          machine->ram_size);
     *ram_memory = ram;
     ram_below_4g = g_malloc(sizeof(*ram_below_4g));
-    // 对前面的整体mr进行划分
+    // 对前面的整体mr(pc.ram)进行划分
     memory_region_init_alias(ram_below_4g, NULL, "ram-below-4g", ram,
                              0, x86ms->below_4g_mem_size);
     // 将mr(ram_below_4g)加入全局mr(system_memory)的子mr
@@ -516,6 +516,15 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
 ## 将整体mr(ram)划分为两个子MR(subregion)
 
 此为**全局的MR**，根据`ram_below_4g`和`ram_above_4g`，**全局的MR**被划分为两部分，形成**两个子MR**。
+
+```cpp
+MemoryRegion *ram_below_4g = g_malloc(sizeof(*ram_below_4g));
+// 对前面的整体mr(pc.ram)进行划分
+memory_region_init_alias(ram_below_4g, NULL, "ram-below-4g", ram,
+                             0, x86ms->below_4g_mem_size);
+// 将mr(ram_below_4g)加入全局mr(system_memory)的子mr
+memory_region_add_subregion(system_memory, 0, ram_below_4g)                             
+```
 
 `memory_region_init_alias()`函数便对两个子MR进行初始化，这里就**不再进行内存的申请**，主要是设置`alias`和`alias_offset`字段，代码如下。
 
