--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -3,26 +3,26 @@
 
 <!-- code_chunk_output -->
 
-- [整体概述](#整体概述)
-- [回调函数的注册](#回调函数的注册)
-- [全局的系统AS和MR的初始化: 不分配GPA/HVA](#全局的系统as和mr的初始化-不分配gpahva)
-- [实际内存的分配GPA/HVA](#实际内存的分配gpahva)
-  - [分配整体内存全局MR(ram)](#分配整体内存全局mrram)
-    - [memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
-    - [vmstate_register_ram_global(): ramblock与mr关联](#vmstate_register_ram_global-ramblock与mr关联)
-  - [将整体mr(ram)划分为两个子MR(subregion)](#将整体mrram划分为两个子mrsubregion)
-- [](#)
-- [参考](#参考)
+- [1. 整体概述](#1-整体概述)
+- [2. 回调函数的注册](#2-回调函数的注册)
+- [3. 全局的系统AS和MR的初始化: 不分配GPA/HVA](#3-全局的系统as和mr的初始化-不分配gpahva)
+- [4. 实际内存的分配GPA/HVA](#4-实际内存的分配gpahva)
+  - [4.1. 分配整体内存全局MR(ram)](#41-分配整体内存全局mrram)
+    - [4.1.1. memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#411-memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
+    - [4.1.2. vmstate_register_ram_global(): ramblock与mr关联](#412-vmstate_register_ram_global-ramblock与mr关联)
+  - [4.2. 将整体mr(ram)划分为两个子MR(subregion)](#42-将整体mrram划分为两个子mrsubregion)
+- [5.](#5)
+- [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
 
-# 整体概述
+# 1. 整体概述
 
 qemu部分的内存申请流程上可以分为三小部分，分成三小部分主要是我在看代码的时候觉得这三部分耦合性不是很大，相对而言比较独立。
 
 众所周知，qemu起始于vl.c中的main函数，那么这三部分也按照在main函数中的调用顺序分别介绍。
 
-# 回调函数的注册
+# 2. 回调函数的注册
 
 涉及函数：`configure_accelerator() -->kvm_init()-->memory_listener_register ()`
 
@@ -80,7 +80,7 @@ static QTAILQ_HEAD(, MemoryListener) memory_listeners
 
 在函数最后还针对**每个address_space**，调用`listener_add_address_space`函数，该函数对其对应的`address_space`管理的**flatrange**向**KVM注册**。当然，实际上**此时address_space**尚未经过初始化，所以这里的循环其实是**空循环**。
 
-# 全局的系统AS和MR的初始化: 不分配GPA/HVA
+# 3. 全局的系统AS和MR的初始化: 不分配GPA/HVA
 
 涉及函数：`cpu_exec_init_all() memory_map_init()` 
 
@@ -159,7 +159,7 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 
 针对系统内核、系统IO的MR和AS的初始化， 但是并不分配GPA/HVA, MR和AS都是全局的
 
-# 实际内存的分配GPA/HVA
+# 4. 实际内存的分配GPA/HVA
 
 前面**注册listener**也好，或是初始化addressspace也好，实际上均**没有对应的物理内存**。
 
@@ -320,7 +320,7 @@ void pc_memory_init(PCMachineState *pcms,
 
 3. 最后需要调用`memory_region_transaction_commit()`函数提交修改。
 
-## 分配整体内存全局MR(ram)
+## 4.1. 分配整体内存全局MR(ram)
 
 为虚拟机内存"pc.ram"和"pc.rom"都分别生成了新的MR, 然后分配内存, 这里看"pc.ram"的内存分配`memory_region_allocate_system_memory(ram, NULL, "pc.ram", machine->ram_size);`, 对于非大页最终会调用到函数`memory_region_init_ram_shared_nomigrate()`
 
@@ -330,7 +330,7 @@ allocate_system_memory_nonuma()
     └- vmstate_register_ram_global();
 ```
 
-### memory_region_init_ram: 创建ramblock并从host上分配虚拟内存
+### 4.1.1. memory_region_init_ram: 创建ramblock并从host上分配虚拟内存
 
 ```cpp
 void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
@@ -491,11 +491,13 @@ static void ram_block_add(RAMBlock *new_block, Error **errp, bool shared)
 
 上图是qemu模拟的普通内存分布模型, 内存的线性也是分块被使用的，每个块称为RAMBlock，由ram_list统领，RAMBlock.offset则是区块的线性地址，即相对于开始的偏移位，RAMBlock.length(size)则是区块的大小. `find_ram_offset`函数则是在**线性区间内**找到**没有使用的一段空间**，可以完全容纳**新申请的ramblock length大小**，代码就是进行了所有区块的遍历(全局链表`ram_list`)，找到满足新申请length的最小区间，把ramblock安插进去即可，返回的offset即是新分配区间的开始地址。
 
-本部分最重要的莫过于**设置其host**了，其对应的**宿主机虚拟地址空间**的**虚拟地址**。在支持**大页**的情况下调用`file_ram_alloc()`函数进行分配，否则调用`phys_mem_alloc()`函数进行分配。二者分配其实都是利用**mmap**分配的，但是在支持大页的情况下需要传递参数`mem_path`,所以需要两个函数。
+本部分最重要的莫过于**设置其host**了，其对应的**宿主机虚拟地址空间！！！** 的**虚拟地址**。在支持**大页**的情况下调用`file_ram_alloc()`函数进行分配，否则调用`phys_mem_alloc()`函数进行分配。二者分配其实都是利用**mmap**分配的，但是在支持大页的情况下需要传递参数`mem_path`,所以需要两个函数。
+
+
 
 在**非大页**的情况下，分配好内存尝试**和相邻的block合并**下。最后把block插入到全局的链表`ram_list`中，只是block保持**从大到小**的顺序。
 
-### vmstate_register_ram_global(): ramblock与mr关联
+### 4.1.2. vmstate_register_ram_global(): ramblock与mr关联
 
 ```cpp
 void vmstate_register_ram_global(MemoryRegion *mr)
@@ -513,17 +515,27 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
 
 `vmstate_register_ram_global`这个函数则是负责将前面提到的ramlist中的**ramblock**和**memory region**的初始地址对应一下，将`mr->name`填充到ramblock的**idstr**里面，就是让二者有确定的对应关系，如此**mr**就有了**物理内存**使用。
 
-## 将整体mr(ram)划分为两个子MR(subregion)
+## 4.2. 将整体mr(ram)划分为两个子MR(subregion)
 
 此为**全局的MR**，根据`ram_below_4g`和`ram_above_4g`，**全局的MR**被划分为两部分，形成**两个子MR**。
 
 ```cpp
-MemoryRegion *ram_below_4g = g_malloc(sizeof(*ram_below_4g));
-// 对前面的整体mr(pc.ram)进行划分
-memory_region_init_alias(ram_below_4g, NULL, "ram-below-4g", ram,
+    MemoryRegion *ram_below_4g = g_malloc(sizeof(*ram_below_4g));
+    // 对前面的整体mr(pc.ram)进行划分
+    memory_region_init_alias(ram_below_4g, NULL, "ram-below-4g", ram,
                              0, x86ms->below_4g_mem_size);
-// 将mr(ram_below_4g)加入全局mr(system_memory)的子mr
-memory_region_add_subregion(system_memory, 0, ram_below_4g)                             
+    // 将mr(ram_below_4g)加入全局mr(system_memory)的子mr
+    memory_region_add_subregion(system_memory, 0, ram_below_4g);
+    e820_add_entry(0, x86ms->below_4g_mem_size, E820_RAM);
+    if (x86ms->above_4g_mem_size > 0) {
+        MemoryRegion *ram_above_4g = g_malloc(sizeof(*ram_above_4g));
+        memory_region_init_alias(ram_above_4g, NULL, "ram-above-4g", ram,
+                                 x86ms->below_4g_mem_size,
+                                 x86ms->above_4g_mem_size);
+        memory_region_add_subregion(system_memory, 0x100000000ULL,
+                                    ram_above_4g);
+        e820_add_entry(0x100000000ULL, x86ms->above_4g_mem_size, E820_RAM);
+    }
 ```
 
 `memory_region_init_alias()`函数便对两个子MR进行初始化，这里就**不再进行内存的申请**，主要是设置`alias`和`alias_offset`字段，代码如下。
@@ -815,7 +827,7 @@ static void address_space_update_topology_pass(AddressSpace *as,
 
 总结：qemu内存虚拟化部分先介绍到这里，本来还想把kvm_region_add函数介绍下，但是考虑到篇幅，同时也正好利用该函数过渡到KVM中，不会显得突兀。由于笔者能力有限，文中不免有不对的地方，还望老师们多多指教，大家一起学习，共同进步！！！
 
-# 
+# 5. 
 
 对于要添加的FR，调用了 MEMORY_LISTENER_UPDATE_REGION(frnew, as, Forward, region_add)
 
@@ -1319,7 +1331,7 @@ void update_memslots(struct kvm_memslots *slots, struct kvm_memory_slot *new,
 }
 ```
 
-# 参考
+# 6. 参考
 
 https://www.cnblogs.com/ck1020/p/6729224.html (已完)
 
