--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -515,7 +515,7 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
 
 ## 4.2. 将整体mr(pc.ram)划分为两个子MR(subregion): 不再申请内存
 
-此为**全局的MR**，根据`ram_below_4g`和`ram_above_4g`，**全局的MR**被划分为两部分，形成**两个子MR**。
+在创建好了ram并且分配好了空间之后，创建了**两个mr alias**，**ram\_below\_4g**以及**ram\_above\_4g**，这两个mr分别指向**ram的低4g**以及**高4g空间**，这两个alias是挂在**根system\_memory mr下面**的, 即高低端内存（也不一定是32bit机器）
 
 ```cpp
     MemoryRegion *ram_below_4g = g_malloc(sizeof(*ram_below_4g));
@@ -539,9 +539,14 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
 对于 `x86_64`, 
 
 ```cpp
+PCMAchineState *pcms;
 X86MachineState *x86ms = X86_MACHINE(pcms);
-
+lowmem = machine->ram_size > pcms->0xe0000000 ? 0xc0000000:0xe0000000;
+pcms->below_4g_mem_size = lowmem;
+pcms->above_4g_mem_size = machine->ram_size - lowmem;
 ```
+
+
 
 `memory_region_init_alias()`函数便对**两个子MR进行初始化**，这里就**不再进行内存的申请**，主要是设置`alias`和`alias_offset`字段，代码如下。
 
