--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -536,12 +536,34 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
     }
 ```
 
-对于 `x86_64`, 
+对于 `x86_64`, 需要给system io留0.5G内存, 检查虚拟机内存是否大于4G(ram_size是否大于3.5G), 
 
 ```cpp
 PCMAchineState *pcms;
 X86MachineState *x86ms = X86_MACHINE(pcms);
-lowmem = machine->ram_size > pcms->0xe0000000 ? 0xc0000000:0xe0000000;
+
+    /* Check whether RAM fits below 4G (leaving 1/2 GByte for IO memory).
+     * If it doesn't, we need to split it in chunks below and above 4G.
+     * In any case, try to make sure that guest addresses aligned at
+     * 1G boundaries get mapped to host addresses aligned at 1G boundaries.
+     * For old machine types, use whatever split we used historically to avoid
+     * breaking migration.
+     */
+    if (machine->ram_size >= 0xe0000000) {
+        lowmem = gigabyte_align ? 0xc0000000 : 0xe0000000;
+    } else {
+        lowmem = 0xe0000000;
+    }
+
+    if (machine->ram_size >= lowmem) {
+        above_4g_mem_size = machine->ram_size - lowmem;
+        below_4g_mem_size = lowmem;
+    } else {
+        above_4g_mem_size = 0;
+        below_4g_mem_size = machine->ram_size;
+    }
+
+lowmem = machine->ram_size >= 0xe0000000 ? 0xc0000000:0xe0000000;
 pcms->below_4g_mem_size = lowmem;
 pcms->above_4g_mem_size = machine->ram_size - lowmem;
 ```
