--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -536,19 +536,13 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
     }
 ```
 
-对于 `x86_64`, 需要给system io留0.5G内存, 检查虚拟机内存是否大于4G(ram_size是否大于3.5G), 
+对于 `x86_64`, 需要给system io留0.5G内存, 检查虚拟机内存是否大于4G(ram_size是否大于3.5G), 计算如下
 
 ```cpp
 PCMAchineState *pcms;
 X86MachineState *x86ms = X86_MACHINE(pcms);
 
-    /* Check whether RAM fits below 4G (leaving 1/2 GByte for IO memory).
-     * If it doesn't, we need to split it in chunks below and above 4G.
-     * In any case, try to make sure that guest addresses aligned at
-     * 1G boundaries get mapped to host addresses aligned at 1G boundaries.
-     * For old machine types, use whatever split we used historically to avoid
-     * breaking migration.
-     */
+pc_init1()
     if (machine->ram_size >= 0xe0000000) {
         lowmem = gigabyte_align ? 0xc0000000 : 0xe0000000;
     } else {
@@ -562,13 +556,9 @@ X86MachineState *x86ms = X86_MACHINE(pcms);
         above_4g_mem_size = 0;
         below_4g_mem_size = machine->ram_size;
     }
-
-lowmem = machine->ram_size >= 0xe0000000 ? 0xc0000000:0xe0000000;
-pcms->below_4g_mem_size = lowmem;
-pcms->above_4g_mem_size = machine->ram_size - lowmem;
 ```
 
-其中 0xc0000000 为 3G, 0xe0000000 为 3.5G 
+其中 0xc0000000 为 3G, 0xe0000000 为 3.5G; 总之, 内存大于3.5G, `below_4g_mem_size = 3G`, `above = size - 3G`;
 
 `memory_region_init_alias()`函数便对**两个子MR进行初始化**，这里就**不再进行内存的申请**，主要是设置`alias`和`alias_offset`字段，代码如下。
 
