--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -11,6 +11,8 @@
     - [4.1.1. memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#411-memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
     - [4.1.2. vmstate_register_ram_global(): ramblock与mr关联](#412-vmstate_register_ram_global-ramblock与mr关联)
   - [4.2. 将整体mr(pc.ram)划分为两个子MR(subregion): 不再申请内存](#42-将整体mrpcram划分为两个子mrsubregion-不再申请内存)
+    - [计算above_4g_mem_size和below_4g_mem_size](#计算above_4g_mem_size和below_4g_mem_size)
+    - [从pc.ram中划分](#从pcram中划分)
 - [5.](#5)
 - [6. 参考](#6-参考)
 
@@ -515,26 +517,9 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
 
 ## 4.2. 将整体mr(pc.ram)划分为两个子MR(subregion): 不再申请内存
 
-在创建好了ram并且分配好了空间之后，创建了**两个mr alias**，**ram\_below\_4g**以及**ram\_above\_4g**，这两个mr分别指向**ram的低4g**以及**高4g空间**，这两个alias是挂在**根system\_memory mr下面**的, 即高低端内存（也不一定是32bit机器）
+在创建好了ram并且分配好了空间之后，创建了**两个mr alias**，`ram_below_4g`以及`ram_above_4g`，这两个mr分别指向**ram的低4g**以及**高4g空间**，这两个alias是挂在**根system\_memory mr下面**的, 即高低端内存（也不一定是32bit机器）
 
-```cpp
-    MemoryRegion *ram_below_4g = g_malloc(sizeof(*ram_below_4g));
-    // 对前面的整体mr(pc.ram)进行划分
-    memory_region_init_alias(ram_below_4g, NULL, "ram-below-4g", ram,
-                             0, x86ms->below_4g_mem_size);
-    // 将mr(ram_below_4g)加入全局mr(system_memory)的子mr
-    memory_region_add_subregion(system_memory, 0, ram_below_4g);
-    e820_add_entry(0, x86ms->below_4g_mem_size, E820_RAM);
-    if (x86ms->above_4g_mem_size > 0) {
-        MemoryRegion *ram_above_4g = g_malloc(sizeof(*ram_above_4g));
-        memory_region_init_alias(ram_above_4g, NULL, "ram-above-4g", ram,
-                                 x86ms->below_4g_mem_size,
-                                 x86ms->above_4g_mem_size);
-        memory_region_add_subregion(system_memory, 0x100000000ULL,
-                                    ram_above_4g);
-        e820_add_entry(0x100000000ULL, x86ms->above_4g_mem_size, E820_RAM);
-    }
-```
+### 计算above_4g_mem_size和below_4g_mem_size
 
 对于 `x86_64`, 需要给system io留0.5G内存, 检查虚拟机内存是否大于4G(ram_size是否大于3.5G), 计算如下
 
@@ -558,7 +543,32 @@ pc_init1()
     }
 ```
 
-其中 0xc0000000 为 3G, 0xe0000000 为 3.5G; 总之, 内存大于3.5G, `below_4g_mem_size = 3G`, `above = size - 3G`;
+其中 0xc0000000 为 3G, 0xe0000000 为 3.5G; 总之, 无论是否32位机器
+
+- 内存大于3.5G, `below_4g_mem_size = 3G`, `above = size - 3G`;
+- 内存小于3.5G, `below_4g_mem_size = size`, `above = 0`;
+
+
+### 从pc.ram中划分
+
+```cpp
+    MemoryRegion *ram_below_4g = g_malloc(sizeof(*ram_below_4g));
+    // 对前面的整体mr(pc.ram)进行划分
+    memory_region_init_alias(ram_below_4g, NULL, "ram-below-4g", ram,
+                             0, x86ms->below_4g_mem_size);
+    // 将mr(ram_below_4g)加入全局mr(system_memory)的子mr
+    memory_region_add_subregion(system_memory, 0, ram_below_4g);
+    e820_add_entry(0, x86ms->below_4g_mem_size, E820_RAM);
+    if (x86ms->above_4g_mem_size > 0) {
+        MemoryRegion *ram_above_4g = g_malloc(sizeof(*ram_above_4g));
+        memory_region_init_alias(ram_above_4g, NULL, "ram-above-4g", ram,
+                                 x86ms->below_4g_mem_size,
+                                 x86ms->above_4g_mem_size);
+        memory_region_add_subregion(system_memory, 0x100000000ULL,
+                                    ram_above_4g);
+        e820_add_entry(0x100000000ULL, x86ms->above_4g_mem_size, E820_RAM);
+    }
+```
 
 `memory_region_init_alias()`函数便对**两个子MR进行初始化**，这里就**不再进行内存的申请**，主要是设置`alias`和`alias_offset`字段，代码如下。
 
@@ -571,12 +581,54 @@ void memory_region_init_alias(MemoryRegion *mr,
                               uint64_t size)
 {
     memory_region_init(mr, owner, name, size);
+    // 这里就是 pc.ram 的MR
     mr->alias = orig;
+    // 这里就是相对于 pc.ram 的偏移
     mr->alias_offset = offset;
 }
 ```
 
 在初始化完毕，需要调用`memory_region_add_subregion()`函数把**子MR**注册到**全局的system_memory**。该函数实现是比较简单的，但是需要重点介绍下，因为这里执行了关键的更新操作。
+
+```cpp
+void memory_region_add_subregion(MemoryRegion *mr,
+                                 hwaddr offset,
+                                 MemoryRegion *subregion)
+{
+    subregion->priority = 0;
+    memory_region_add_subregion_common(mr, offset, subregion);
+}
+
+static void memory_region_add_subregion_common(MemoryRegion *mr,
+                                               hwaddr offset,
+                                               MemoryRegion *subregion)
+{
+    assert(!subregion->container);
+    subregion->container = mr;
+    subregion->addr = offset;
+    memory_region_update_container_subregions(subregion);
+}
+
+static void memory_region_update_container_subregions(MemoryRegion *subregion)
+{
+    MemoryRegion *mr = subregion->container;
+    MemoryRegion *other;
+
+    memory_region_transaction_begin();
+
+    memory_region_ref(subregion);
+    QTAILQ_FOREACH(other, &mr->subregions, subregions_link) {
+        if (subregion->priority >= other->priority) {
+            QTAILQ_INSERT_BEFORE(other, subregion, subregions_link);
+            goto done;
+        }
+    }
+    QTAILQ_INSERT_TAIL(&mr->subregions, subregion, subregions_link);
+done:
+    memory_region_update_pending |= mr->enabled && subregion->enabled;
+    memory_region_transaction_commit();
+}
+```
 
 函数核心交给`memory_region_add_subregion_common()`函数实现，该函数同样比较简单，设置`subregion->parent`和`system_memory`的关联，设置**其addr字段**为offset，即在**全局MR中的偏移**。然后就按照**优先级顺序**把**subregion**插入到`system_memory`的**subregions链表**中，这些都比较简单.
 
