--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -10,9 +10,9 @@
   - [4.1. 分配整体内存全局MR(ram)](#41-分配整体内存全局mrram)
     - [4.1.1. memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#411-memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
     - [4.1.2. vmstate_register_ram_global(): ramblock与mr关联](#412-vmstate_register_ram_global-ramblock与mr关联)
-  - [4.2. 将整体mr(pc.ram)划分为两个子MR(subregion): 不再申请内存](#42-将整体mrpcram划分为两个子mrsubregion-不再申请内存)
+  - [4.2. 将整体mr(pc.ram)划分为两个子MR(subregion): 不再申请内存, 即不关联host虚拟内存(HVA)](#42-将整体mrpcram划分为两个子mrsubregion-不再申请内存-即不关联host虚拟内存hva)
     - [计算above_4g_mem_size和below_4g_mem_size](#计算above_4g_mem_size和below_4g_mem_size)
-    - [从pc.ram中划分](#从pcram中划分)
+    - [从pc.ram中划分并加入system_memory的subregion](#从pcram中划分并加入system_memory的subregion)
 - [5.](#5)
 - [6. 参考](#6-参考)
 
@@ -515,7 +515,7 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
 
 `vmstate_register_ram_global`这个函数则是负责将前面提到的ramlist中的**ramblock**和**memory region**的初始地址对应一下，将`mr->name`填充到ramblock的**idstr**里面，就是让二者有确定的对应关系，如此**mr**就有了**物理内存**使用。
 
-## 4.2. 将整体mr(pc.ram)划分为两个子MR(subregion): 不再申请内存
+## 4.2. 将整体mr(pc.ram)划分为两个子MR(subregion): 不再申请内存, 即不关联host虚拟内存(HVA)
 
 在创建好了ram并且分配好了空间之后，创建了**两个mr alias**，`ram_below_4g`以及`ram_above_4g`，这两个mr分别指向**ram的低4g**以及**高4g空间**，这两个alias是挂在**根system\_memory mr下面**的, 即高低端内存（也不一定是32bit机器）
 
@@ -549,7 +549,7 @@ pc_init1()
 - 内存小于3.5G, `below_4g_mem_size = size`, `above = 0`;
 
 
-### 从pc.ram中划分
+### 从pc.ram中划分并加入system_memory的subregion
 
 ```cpp
     MemoryRegion *ram_below_4g = g_malloc(sizeof(*ram_below_4g));
@@ -630,7 +630,7 @@ done:
 }
 ```
 
-函数核心交给`memory_region_add_subregion_common()`函数实现，该函数同样比较简单，设置`subregion->parent`和`system_memory`的关联，设置**其addr字段**为offset，即在**全局MR中的偏移**。然后就按照**优先级顺序**把**subregion**插入到`system_memory`的**subregions链表**中，这些都比较简单.
+函数核心交给`memory_region_add_subregion_common()`函数实现，该函数同样比较简单，设置`subregion->container`和`system_memory`的关联，设置**其addr字段**为offset，即在**全局MR中的偏移**。然后就按照**优先级顺序**把**subregion**插入到`system_memory`的**subregions链表**中，这些都比较简单.
 
 目前我们添加了区域，**地址空间已经发生变化**，自然要把变化和KVM进行同步，这一工作由`memory_region_transaction_commit()`实现。
 
