--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -604,7 +604,9 @@ static void memory_region_add_subregion_common(MemoryRegion *mr,
                                                MemoryRegion *subregion)
 {
     assert(!subregion->container);
+    // container为system_memory
     subregion->container = mr;
+    // addr 是在AddressSpace中的地址, GPA, 
     subregion->addr = offset;
     memory_region_update_container_subregions(subregion);
 }
@@ -630,7 +632,15 @@ done:
 }
 ```
 
-函数核心交给`memory_region_add_subregion_common()`函数实现，该函数同样比较简单，设置`subregion->container`和`system_memory`的关联，设置**其addr字段**为offset，即在**全局MR中的偏移**。然后就按照**优先级顺序**把**subregion**插入到`system_memory`的**subregions链表**中，这些都比较简单.
+函数核心交给`memory_region_add_subregion_common()`函数实现，该函数同样比较简单，设置`subregion->container`和`system_memory`的关联，设置**其addr字段**为offset，即在**全局AS中的偏移**。然后就按照**优先级顺序**把**subregion**插入到`system_memory`的**subregions链表**中，这些都比较简单.
+
+对上述x86_64的memory_region_init_alias()画图描述：
+
+![2020-03-01-00-23-18.png](./images/2020-03-01-00-23-18.png)
+
+上述x86_64 ram的memory_region_add_subregion_common() 
+
+![2020-03-01-00-23-42.png](./images/2020-03-01-00-23-42.png)
 
 目前我们添加了区域，**地址空间已经发生变化**，自然要把变化和KVM进行同步，这一工作由`memory_region_transaction_commit()`实现。
 
@@ -1410,3 +1420,5 @@ https://www.cnblogs.com/ck1020/p/6729224.html (已完)
 https://www.cnblogs.com/ck1020/p/6738116.html (已完)
 
 https://blog.csdn.net/Shirleylinyuer/article/details/83592758 (未整理)
+
+http://abcdxyzk.github.io/blog/2015/07/29/kvm-src2/ (未完)
