--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -13,6 +13,7 @@
   - [4.2. 将整体mr(pc.ram)划分为两个子MR(subregion): 不再申请内存, 即不关联host虚拟内存(HVA)](#42-将整体mrpcram划分为两个子mrsubregion-不再申请内存-即不关联host虚拟内存hva)
     - [计算above_4g_mem_size和below_4g_mem_size](#计算above_4g_mem_size和below_4g_mem_size)
     - [从pc.ram中划分并加入system_memory的subregion](#从pcram中划分并加入system_memory的subregion)
+      - [初始化alias的mr: 不申请内存](#初始化alias的mr-不申请内存)
 - [5.](#5)
 - [6. 参考](#6-参考)
 
@@ -552,6 +553,7 @@ pc_init1()
 ### 从pc.ram中划分并加入system_memory的subregion
 
 ```cpp
+    // 创建新的 mr
     MemoryRegion *ram_below_4g = g_malloc(sizeof(*ram_below_4g));
     // 对前面的整体mr(pc.ram)进行划分
     memory_region_init_alias(ram_below_4g, NULL, "ram-below-4g", ram,
@@ -569,6 +571,8 @@ pc_init1()
         e820_add_entry(0x100000000ULL, x86ms->above_4g_mem_size, E820_RAM);
     }
 ```
+
+#### 初始化alias的mr: 不申请内存
 
 `memory_region_init_alias()`函数便对**两个子MR进行初始化**，这里就**不再进行内存的申请**，主要是设置`alias`和`alias_offset`字段，代码如下。
 
