--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -14,7 +14,7 @@
     - [计算above_4g_mem_size和below_4g_mem_size](#计算above_4g_mem_size和below_4g_mem_size)
     - [从pc.ram中划分并加入system_memory的subregion](#从pcram中划分并加入system_memory的subregion)
       - [memory_region_init_alias(): 初始化alias的mr, 不申请内存](#memory_region_init_alias-初始化alias的mr-不申请内存)
-      - [memory_region_add_subregion():](#memory_region_add_subregion)
+      - [memory_region_add_subregion(): subregion注册到全局的system_memory](#memory_region_add_subregion-subregion注册到全局的system_memory)
 - [5.](#5)
 - [6. 参考](#6-参考)
 
@@ -593,7 +593,7 @@ void memory_region_init_alias(MemoryRegion *mr,
 }
 ```
 
-#### memory_region_add_subregion(): 
+#### memory_region_add_subregion(): subregion注册到全局的system_memory
 
 在初始化完毕，需要调用`memory_region_add_subregion()`函数把**子MR**注册到**全局的system_memory**。该函数实现是比较简单的，但是需要重点介绍下，因为这里执行了关键的更新操作。
 
@@ -606,6 +606,8 @@ void memory_region_add_subregion(MemoryRegion *mr,
     memory_region_add_subregion_common(mr, offset, subregion);
 }
 
+函数核心交给`memory_region_add_subregion_common()`函数实现
+
 static void memory_region_add_subregion_common(MemoryRegion *mr,
                                                hwaddr offset,
                                                MemoryRegion *subregion)
@@ -617,6 +619,8 @@ static void memory_region_add_subregion_common(MemoryRegion *mr,
     subregion->addr = offset;
     memory_region_update_container_subregions(subregion);
 }
+
+该函数同样比较简单，设置`subregion->container`和`system_memory`的关联，设置**其addr字段**为offset，即在**全局AS中的偏移**。
 
 static void memory_region_update_container_subregions(MemoryRegion *subregion)
 {
@@ -639,7 +643,7 @@ done:
 }
 ```
 
-函数核心交给`memory_region_add_subregion_common()`函数实现，该函数同样比较简单，设置`subregion->container`和`system_memory`的关联，设置**其addr字段**为offset，即在**全局AS中的偏移**。然后就按照**优先级顺序**把**subregion**插入到`system_memory`的**subregions链表**中，这些都比较简单.
+然后就按照**优先级顺序**把**subregion**插入到`system_memory`的**subregions链表**中，这些都比较简单.
 
 对上述x86_64的memory_region_init_alias()画图描述：
 
