--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -598,6 +598,9 @@ void memory_region_init_alias(MemoryRegion *mr,
 在初始化完毕，需要调用`memory_region_add_subregion()`函数把**子MR**注册到**全局的system_memory**。该函数实现是比较简单的，但是需要重点介绍下，因为这里执行了关键的更新操作。
 
 ```cpp
+memory_region_add_subregion(system_memory, 0, ram_below_4g);
+memory_region_add_subregion(system_memory, 0x100000000ULL, ram_above_4g);
+
 void memory_region_add_subregion(MemoryRegion *mr,
                                  hwaddr offset,
                                  MemoryRegion *subregion)
@@ -609,6 +612,7 @@ void memory_region_add_subregion(MemoryRegion *mr,
 
 函数核心交给`memory_region_add_subregion_common()`函数实现
 
+```cpp
 static void memory_region_add_subregion_common(MemoryRegion *mr,
                                                hwaddr offset,
                                                MemoryRegion *subregion)
@@ -620,9 +624,11 @@ static void memory_region_add_subregion_common(MemoryRegion *mr,
     subregion->addr = offset;
     memory_region_update_container_subregions(subregion);
 }
+```
 
 该函数同样比较简单，设置`subregion->container`和`system_memory`的关联，设置**其addr字段**为offset，即在**全局AS中的偏移**。
 
+```cpp
 static void memory_region_update_container_subregions(MemoryRegion *subregion)
 {
     MemoryRegion *mr = subregion->container;
