--- Auto-Git Commit ---

--- a/Virtualization/QEMU/3. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/3. memory/3. 具体实现机制.md
@@ -654,11 +654,11 @@ done:
 
 然后就按照**优先级顺序**把**subregion**插入到`system_memory`的**subregions链表**中，这些都比较简单.
 
-对上述x86_64的memory_region_init_alias()画图描述：
+对上述x86_64的`memory_region_init_alias()`画图描述：
 
 ![2020-03-01-00-23-18.png](./images/2020-03-01-00-23-18.png)
 
-上述x86_64 ram的memory_region_add_subregion_common() 
+上述x86_64 ram的`memory_region_add_subregion_common()`
 
 ![2020-03-01-00-23-42.png](./images/2020-03-01-00-23-42.png)
 
@@ -684,7 +684,7 @@ void memory_region_transaction_commit(void)
 }
 ```
 
-可以看到，这里listener的作用就凸显出来了。对于每个address_space，调用address_space_update_topology()执行更新。里面涉及两个重要的函数generate_memory_topology和address_space_update_topology_pass。前者对于一个给定的MR，生成其对应的FlatView，而后者则根据oldview和newview对当前视图进行更新。我们还是看下address_space_update_topology函数代码
+可以看到，这里listener的作用就凸显出来了。对于**每个address_space**，调用address_space_update_topology()执行更新。里面涉及两个重要的函数generate_memory_topology和address_space_update_topology_pass。前者对于一个给定的MR，生成其对应的FlatView，而后者则根据oldview和newview对当前视图进行更新。我们还是看下address_space_update_topology函数代码
 
 ```cpp
 static void address_space_update_topology(AddressSpace *as)
