--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/4. 字段ID值.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/4. 字段ID值.md
@@ -35,6 +35,32 @@ bits 11:10 的类型值包含 4 类:
 
 # 32 位字段 ID
 
+![2020-03-02-14-17-54.png](./images/2020-03-02-14-17-54.png)
 
+![2020-03-02-14-21-08.png](./images/2020-03-02-14-21-08.png)
+
+32 位字段ID值的 `bits 14:13`值为 2 .
+
+`bits 11:10`的类型值包含4类:
+
+- 控制字段(类型为0)
+- 只读字段(类型为1)
+- guest-state字段(类型为2)
+- host-state字段(类型为3) 
 
 # Natural-width 字段 ID
+
+![2020-03-02-14-22-40.png](./images/2020-03-02-14-22-40.png)
+
+![2020-03-02-14-22-55.png](./images/2020-03-02-14-22-55.png)
+
+![2020-03-02-14-23-05.png](./images/2020-03-02-14-23-05.png)
+
+natural-width 字段ID值的 `bits 14:13`值为 3 .
+
+`bits 11:10`的类型值包含4类:
+
+- 控制字段(类型为0)
+- 只读字段(类型为1)
+- guest-state字段(类型为2)
+- host-state字段(类型为3) 
