--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/4. 字段ID值.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/4. 字段ID值.md
@@ -1,4 +1,15 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 16 位字段 ID](#1-16-位字段-id)
+- [2. 64 位字段 ID](#2-64-位字段-id)
+- [3. 32 位字段 ID](#3-32-位字段-id)
+- [4. Natural-width 字段 ID](#4-natural-width-字段-id)
+
+<!-- /code_chunk_output -->
+
 下面的内容将以字段宽度分类, 列出所有 VMCS 字段ID值, 分别有:
 
 - 16 位字段 ID
@@ -6,7 +17,9 @@
 - 32 位字段 ID
 - Natural-width 字段 ID
 
-# 16 位字段 ID
+在该书源码中, 下面所有字段 ID 值定义在 `inc/vmx.inc` 文件中.
+
+# 1. 16 位字段 ID
 
 ![2020-02-25-21-07-49.png](./images/2020-02-25-21-07-49.png)
 
@@ -18,7 +31,7 @@
 - guest-state字段(类型为2)
 - host-state字段(类型为3)
 
-# 64 位字段 ID
+# 2. 64 位字段 ID
 
 ![2020-02-25-21-16-54.png](./images/2020-02-25-21-16-54.png)
 
@@ -33,7 +46,7 @@ bits 11:10 的类型值包含 4 类:
 - guest-state字段(类型为2)
 - host-state字段(类型为3)
 
-# 32 位字段 ID
+# 3. 32 位字段 ID
 
 ![2020-03-02-14-17-54.png](./images/2020-03-02-14-17-54.png)
 
@@ -48,7 +61,7 @@ bits 11:10 的类型值包含 4 类:
 - guest-state字段(类型为2)
 - host-state字段(类型为3) 
 
-# Natural-width 字段 ID
+# 4. Natural-width 字段 ID
 
 ![2020-03-02-14-22-40.png](./images/2020-03-02-14-22-40.png)
 
@@ -64,3 +77,4 @@ natural-width 字段ID值的 `bits 14:13`值为 3 .
 - 只读字段(类型为1)
 - guest-state字段(类型为2)
 - host-state字段(类型为3) 
+
