--- Auto-Git Commit ---

--- a/Virtualization/Tools/测试虚拟机构建.md
+++ b/Virtualization/Tools/测试虚拟机构建.md
@@ -66,7 +66,7 @@ netstat -a | grep tftp
 使用tftp
 
 ```
-# tftp 10.112.116.35
+# tftp XXXX
 tftp> bin
 tftp> get test
 tftp> q
@@ -89,6 +89,6 @@ systemctl enable httpd
 在虚拟机里
 
 ```
-wget http://10.112.116.35/t
+wget http://XXXXX/t
 ```
 
