--- a/Virtualization/KVM/2. 模块初始化/1. KVM模块初始化.md
+++ b/Virtualization/KVM/2. 模块初始化/1. KVM模块初始化.md
@@ -1,25 +1,24 @@
-
 <!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
 <!-- code_chunk_output -->
 
 - [1. 整体介绍](#1-整体介绍)
-- [2. kvm_init: 初始化kvm框架](#2-kvm_init-初始化kvm框架)
+- [2. kvm_init: 初始化 kvm 框架](#2-kvm_init-初始化-kvm-框架)
   - [2.1. 架构初始化: kvm_arch_init](#21-架构初始化-kvm_arch_init)
-    - [2.1.1. 检查](#211-检查)
+    - [2.1.1. CPU特性支持检查](#211-cpu特性支持检查)
     - [2.1.2. kmem_cache分配(x86_fpu)](#212-kmem_cache分配x86_fpu)
     - [2.1.3. percpu kvm_shared_msrs](#213-percpu-kvm_shared_msrs)
-    - [2.1.4. mmu模块相关处理](#214-mmu模块相关处理)
-    - [2.1.5. 设置全局的kvm_x86_ops](#215-设置全局的kvm_x86_ops)
-    - [2.1.6. 设置MMU的shadow PTE masks](#216-设置mmu的shadow-pte-masks)
+    - [2.1.4. mmu 模块相关处理](#214-mmu-模块相关处理)
+    - [2.1.5. 设置全局的 kvm_x86_ops](#215-设置全局的-kvm_x86_ops)
+    - [2.1.6. 设置 MMU 的shadow PTE masks](#216-设置-mmu-的shadow-pte-masks)
     - [2.1.7. timer初始化](#217-timer初始化)
     - [2.1.8. lapic初始化](#218-lapic初始化)
   - [2.2. workqueue?](#22-workqueue)
   - [2.3. 架构相关的硬件设置](#23-架构相关的硬件设置)
-    - [2.3.1. vmx/svm的硬件配置hardware_setup()](#231-vmxsvm的硬件配置hardware_setup)
-        - [2.3.1.1. 设置全局vmcs_config和vmx_capability](#2311-设置全局vmcs_config和vmx_capability)
+    - [2.3.1. vmx/svm 的硬件配置 hardware_setup()](#231-vmxsvm-的硬件配置-hardware_setup)
+        - [2.3.1.1. 设置全局 vmcs_config 和 vmx_capability](#2311-设置全局-vmcs_config-和-vmx_capability)
         - [2.3.1.2. 一堆检查](#2312-一堆检查)
-        - [2.3.1.3. posted中断的wakeup处理函数设置](#2313-posted中断的wakeup处理函数设置)
+        - [2.3.1.3. posted 中断的 wakeup 处理函数设置](#2313-posted-中断的-wakeup-处理函数设置)
         - [2.3.1.4. percpu的VMXON region](#2314-percpu的vmxon-region)
     - [2.3.2. msr保存到全局变量msrs_to_save[]数组](#232-msr保存到全局变量msrs_to_save数组)
   - [2.4. 检查每个处理器对vmx的兼容性](#24-检查每个处理器对vmx的兼容性)
@@ -87,7 +86,7 @@ vmx_init()                               // 初始化入口
  └─ vmx_check_vmcs12_offsets()
 ```
 
-# 2. kvm_init: 初始化kvm框架
+# 2. kvm_init: 初始化 kvm 框架
 
 在`virt/kvm/kvm_main.c`中
 
@@ -111,7 +110,7 @@ r = kvm_arch_init(opaque);
 
 主要是架构相关的检查和初始化
 
-### 2.1.1. 检查
+### 2.1.1. CPU特性支持检查
 
 ```cpp
 // CPUID.1:ECX.VMX[bit 5] -> VT 必须支持
@@ -139,7 +138,7 @@ static struct kvm_shared_msrs __percpu *shared_msrs;
 shared_msrs = alloc_percpu(struct kvm_shared_msrs);
 ```
 
-### 2.1.4. mmu模块相关处理
+### 2.1.4. mmu 模块相关处理
 
 ```cpp
 // arch/x86/kvm/x86.c
@@ -163,7 +162,7 @@ int kvm_mmu_module_init(void)
 }
 ```
 
-### 2.1.5. 设置全局的kvm_x86_ops
+### 2.1.5. 设置全局的 kvm_x86_ops
 
 ```cpp
 struct kvm_x86_ops *kvm_x86_ops __read_mostly;
@@ -172,7 +171,7 @@ EXPORT_SYMBOL_GPL(kvm_x86_ops);
 kvm_x86_ops = ops;
 ```
 
-### 2.1.6. 设置MMU的shadow PTE masks
+### 2.1.6. 设置 MMU 的shadow PTE masks
 
 ```cpp
 // 设置MMU的shadow PTE masks
@@ -203,7 +202,7 @@ kvm_irqfd_init();
 kvm_arch_hardware_setup();
 ```
 
-### 2.3.1. vmx/svm的硬件配置hardware_setup()
+### 2.3.1. vmx/svm 的硬件配置 hardware_setup()
 
 实际上调用的是 
 
@@ -211,7 +210,7 @@ kvm_arch_hardware_setup();
 kvm_x86_ops->hardware_setup();
 ```
 
-##### 2.3.1.1. 设置全局vmcs_config和vmx_capability
+##### 2.3.1.1. 设置全局 vmcs_config 和 vmx_capability
 
 ```cpp
 // arch/x86/kvm/vmx/capabilities.h
@@ -227,7 +226,7 @@ if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
 
 ##### 2.3.1.2. 一堆检查
 
-##### 2.3.1.3. posted中断的wakeup处理函数设置
+##### 2.3.1.3. posted 中断的 wakeup 处理函数设置
 
 ```cpp
 kvm_set_posted_intr_wakeup_handler(wakeup_handler);
