--- Auto-Git Commit ---

--- a/Virtualization/KVM/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/2. 内核模块组成概述.md
+++ b/Virtualization/KVM/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/2. 内核模块组成概述.md
@@ -1,4 +1,3 @@
-
 <!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
 <!-- code_chunk_output -->
@@ -11,7 +10,7 @@
   - [2.4. include/linux目录](#24-includelinux目录)
   - [2.5. include/asm-x86目录](#25-includeasm-x86目录)
   - [2.6. 文档](#26-文档)
-  - [include/trace/events/kvm.h](#includetraceeventskvmh)
+  - [2.7. include/trace/events/kvm.h](#27-includetraceeventskvmh)
 
 <!-- /code_chunk_output -->
 
@@ -191,6 +190,6 @@ drwxr-xr-x 2  501   80    202 Nov 27 09:06 devices
 -rw-r--r-- 1  501   80  13237 Aug 13 11:30 vcpu-requests.rst
 ```
 
-## include/trace/events/kvm.h
+## 2.7. include/trace/events/kvm.h
 
 事件跟踪函数的声明
