--- Auto-Git Commit ---

--- a/Virtualization/KVM/1. Summary/1. 基本工作原理.md
+++ b/Virtualization/KVM/1. Summary/1. 基本工作原理.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [1. KVM模型架构](#1-kvm模型架构)
+- [1. KVM 模型架构](#1-kvm-模型架构)
   - [KVM运行时的三种模式](#kvm运行时的三种模式)
   - [理解KVM与Qemu的关系](#理解kvm与qemu的关系)
 - [2. KVM工作原理](#2-kvm工作原理)
@@ -13,7 +13,7 @@
 
 <!-- /code_chunk_output -->
 
-# 1. KVM模型架构
+# 1. KVM 模型架构
 
 在所有虚拟化方案中，都是由**hypervisor取代原生的OS**去控制具体硬件资源，而同时hypervisor将资源分配具体的VM，VM中运行的是没有修改过的OS，如果让VM中的OS能正常运行，hypervisor的任务就是模拟具体的硬件资源，让OS不能识别出是真是假。
 
