--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/4. 编译和安装QEMU.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/4. 编译和安装QEMU.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [1. 曾经的qemu\-kvm](#1-曾经的qemu-kvm)
+- [1. 曾经的qemu-kvm](#1-曾经的qemu-kvm)
 - [2. 下载QEMU源代码](#2-下载qemu源代码)
 - [3. 配置和编译QEMU](#3-配置和编译qemu)
   - [3.1. ./configure --help帮助](#31-configure-help帮助)
@@ -17,11 +17,13 @@
 
 在编译和安装了KVM并且启动到编译的内核之后，下面来看一下QEMU的编译和安装。
 
-# 1. 曾经的qemu\-kvm
+# 1. 曾经的qemu-kvm
 
 在上一版中，我们是以qemu\-kvm为例来讲解QEMU/KVM的。qemu-kvm原本是kernel社区维护的**专门用于KVM的QEMU的分支**。
 
-在**2012年**年末的时候，这个分支**并入了主流的QEMU**（ git://git.qemu-project.org/qemu.git ）。从此，不再需要特殊的qemu-kvm，而只是**通用的QEMU**加上\-\-**enable\-kvm**选项就可以创建KVM guest了。
+在**2012年**年末的时候，这个分支**并入了主流的QEMU**（ git://git.qemu-project.org/qemu.git ）。
+
+从此，**不再需要**特殊的qemu-kvm，而只是**通用的QEMU**加上`--enable-kvm`选项就可以创建KVM guest了。
 
 # 2. 下载QEMU源代码
 
