--- a/Virtualization/QEMU/第6章 qemu-kvm原理与分析/1. QEMU软件架构.md
+++ b/Virtualization/QEMU/第6章 qemu-kvm原理与分析/1. QEMU软件架构.md
@@ -3,10 +3,19 @@
 
 <!-- code_chunk_output -->
 
+- [1. 曾经的qemu-kvm](#1-曾经的qemu-kvm)
 - [qemu-kvm 的配置与编译](#qemu-kvm-的配置与编译)
 - [qemu-kvm 的架构与配置](#qemu-kvm-的架构与配置)
 
 <!-- /code_chunk_output -->
+
+# 1. 曾经的qemu-kvm
+
+在上一版中，我们是以qemu\-kvm为例来讲解QEMU/KVM的。qemu-kvm原本是kernel社区维护的**专门用于KVM的QEMU的分支**。
+
+在**2012年**年末的时候，这个分支**并入了主流的QEMU**（ git://git.qemu-project.org/qemu.git ）。
+
+从此，不再需要特殊的qemu-kvm，而只是**通用的QEMU**加上`--enable-kvm`选项就可以创建KVM guest了。
 
 # qemu-kvm 的配置与编译
 
