--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/4. 编译和安装QEMU.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/4. 编译和安装QEMU.md
@@ -51,11 +51,11 @@ https://www.qemu.org/download/
 
 # 3. 配置和编译QEMU
 
-QEMU的配置并不复杂，通常情况下，**直接运行代码仓库中configure文件**进行配置即可。
+QEMU是一个高度可定制化的模块项目。从官方网站获得 QEMU源代码之后，需要通过 configure进行配置，以为后续的Makefile编译出符合要求的QEMU版本而做好准备。
 
 ## 3.1. ./configure --help帮助
 
-当然，如果对其配置不熟悉，可以运行“./configure \-\-help”命令查看配置的一些选项及其帮助信息。
+当然，如果对其配置不熟悉，可以运行“`./configure --help`”命令查看配置的一些选项及其帮助信息。
 
 显示配置的帮助信息如下：
 
