--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/1. libvirt.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/1. libvirt.md
@@ -6,7 +6,9 @@
 - [1. libvirt简介](#1-libvirt简介)
   - [1.1. 多种虚拟化方案支持](#11-多种虚拟化方案支持)
   - [1.2. LGPL许可证](#12-lgpl许可证)
-  - [1.3. 编程语言支持、AMQP和加密认证](#13-编程语言支持-amqp和加密认证)
+  - [1.3. 编程语言支持](#13-编程语言支持)
+  - [AMQP 协议](#amqp-协议)
+  - [加密认证](#加密认证)
   - [1.4. 基本架构](#14-基本架构)
   - [1.5. 重要概念](#15-重要概念)
   - [1.6. 管理功能](#16-管理功能)
@@ -85,9 +87,17 @@ libvirt支持**多种虚拟化方案**，既支持包括**KVM**、**QEMU**、**X
 
 libvirt是一个免费的开源的软件，使用的许可证是LGPL￼（**GNU宽松的通用公共许可证**），使用libvirt库进行链接的软件程序**不一定要选择开源和遵守GPL许可证**。和KVM、Xen等开源项目类似，libvirt也有自己的开发者社区，而且随着虚拟化、云计算等成为近年来的技术热点，libvirt项目的社区也比较活跃。目前，libvirt的开发主要由Redhat公司作为强大的支持，由于Redhat公司在虚拟化方面逐渐偏向于支持KVM（而不是Xen），故libvirt对QEMU/KVM的支持是非常成熟和稳定的。当然，IBM、Novell等公司以及众多的个人开发者对libvirt项目的代码贡献量也是非常大的。
 
-## 1.3. 编程语言支持、AMQP和加密认证
+## 1.3. 编程语言支持
 
-libvirt本身提供了一套较为稳定的**C语言应用程序接口**，目前，在其他一些流行的**编程语言**中也提供了对libvirt的绑定，在Python、Perl、Java、Ruby、PHP、OCaml等高级编程语言中已经有**libvirt的程序库**可以直接使用。libvirt还提供了为基于**AMQP（高级消息队列协议**）的**消息系统**（如Apache Qpid）提供**QMF代理**，这可以让云计算管理系统中**宿主机与客户机**、**客户机与客户机**之间的消息通信变得更易于实现。libvirt还为安全地**远程管理虚拟客户机**提供了**加密和认证**等安全措施。
+libvirt本身提供了一套较为稳定的**C语言应用程序接口**，目前，在其他一些流行的**编程语言**中也提供了对libvirt的绑定，在Python、Perl、Java、Ruby、PHP、OCaml等高级编程语言中已经有**libvirt的程序库**可以直接使用。
+
+## AMQP 协议
+
+libvirt还提供了为基于**AMQP（高级消息队列协议**）的**消息系统**（如Apache Qpid）提供**QMF代理**，这可以让云计算管理系统中**宿主机与客户机**、**客户机与客户机**之间的消息通信变得更易于实现。
+
+## 加密认证
+
+libvirt还为安全地**远程管理虚拟客户机**提供了**加密和认证**等安全措施。
 
 正是由于libvirt拥有这些强大的功能和较为稳定的应用程序接口，而且它的许可证（license）也比较宽松，所以libvirt的应用程序接口已被广泛地用在基于虚拟化和云计算的解决方案中，主要作为**连接底层Hypervisor**和**上层应用程序**的一个**中间适配层**。
 
