--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
@@ -3,19 +3,15 @@
 
 <!-- code_chunk_output -->
 
-- [1. libvirt简介及使用样例](#1-libvirt简介及使用样例)
-- [2. 基于libvirt所开发的开源应用](#2-基于libvirt所开发的开源应用)
+- [1. libvirt 简介及使用样例](#1-libvirt-简介及使用样例)
+- [2. 基于 libvirt 所开发的开源应用](#2-基于-libvirt-所开发的开源应用)
 - [3. 安装与配置](#3-安装与配置)
-  - [3.1. Windows环境下的安装配置](#31-windows环境下的安装配置)
-  - [3.2. Linux环境下的安装配置](#32-linux环境下的安装配置)
+  - [3.1. Windows 环境下的安装配置](#31-windows-环境下的安装配置)
+  - [3.2. Linux 环境下的安装配置](#32-linux-环境下的安装配置)
 
 <!-- /code_chunk_output -->
 
-libvirt 是一种用来构建应用程序的强大库，能够跨系统的大型网络在不同的虚拟机监控程序环境中管理域。当今社会，云计算飞速发展，libvirt 必将随之发展，不断获得新的应用程序和用户。
-
-# 1. libvirt简介及使用样例
-
-libvirt是一套免费、开源的支持Linux下主流虚拟化工具的C函数库，支持与C、C++、Ruby、Python等多种主流开发语言的绑定。
+# 1. libvirt 简介及使用样例
 
 libvirt的主要目标是为包括Xen在内的各种虚拟化工具提供一套方便、可靠的编程接口，用一种单一的方式管理多种不同的虚拟化提供方式和Hypervisor，避免学习、使用不同Hypervisor的特定工具。
 
@@ -32,7 +28,7 @@ libvirt支持各种虚拟机监控程序，包括Xen、KVM，以及QEMU和用于
 - libvirt是一个DMTF（Distributed Management Task Force，分布式管理任务组）虚拟化模式的CIM（Computer Integrated Manufacturing，计算机集成制造）提供者。
 - libvirt是一个实现AMQP（Advanced Message Queuing Protocol，消息队列协议）/Qpid（AMQP 的一个实现）消息系统的 QMF（Query Management Facility，查询管理应用程序）代理。
 
-# 2. 基于libvirt所开发的开源应用
+# 2. 基于 libvirt 所开发的开源应用
 
 libvirt 的功能强大，目前有大量的应用程序正成功构建于 libvirt 之上。
 
@@ -46,13 +42,13 @@ libvirt 的功能强大，目前有大量的应用程序正成功构建于 libvi
 
 # 3. 安装与配置
 
-## 3.1. Windows环境下的安装配置
+## 3.1. Windows 环境下的安装配置
 
 libvirt在Windows环境下的安装非常简单，只需要下载可执行安装程序，运行安装即可。安装程序的下载地址可以参考如下网址。
 
 http://libvirt.org/sources/win32_experimental/Libvirt-0.8.8-0.exe
 
-## 3.2. Linux环境下的安装配置
+## 3.2. Linux 环境下的安装配置
 
 libvirt在Linux环境下的安装有两种方式，具体介绍如下。
 
