--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/1. libvirt.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/1. libvirt.md
@@ -6,6 +6,7 @@
 - [1. libvirt简介](#1-libvirt简介)
   - [1.1. 多种虚拟化方案支持](#11-多种虚拟化方案支持)
   - [1.2. LGPL许可证](#12-lgpl许可证)
+  - [开发者社区](#开发者社区)
   - [1.3. 编程语言支持](#13-编程语言支持)
   - [AMQP 协议](#amqp-协议)
   - [加密认证](#加密认证)
@@ -75,9 +76,20 @@
 
 # 1. libvirt简介
 
-libvirt是目前使用最为广泛的对KVM虚拟机进行管理的工具和应用程序接口，而且一些常用的虚拟机管理工具（如**virsh**、**virt\-install**、**virt\-manager**等）和云计算框架平台（如OpenStack、ZStack、OpenNebula、Eucalyptus等）都在**底层使用libvirt的应用程序接口**。
+libvirt的主要目标是为包括Xen在内的各种虚拟化工具提供一套方便、可靠的**编程接口**，用一种单一的方式管理多种不同的虚拟化提供方式和Hypervisor，避免学习、使用不同Hypervisor的特定工具。
+
+libvirt本身**不是一种工具**，它为虚拟化管理工具提供**API**（Application Programming Interface，应用程序编程接口）；当前主流 Linux 平台上默认的虚拟化管理工具 **virsh**、**virt-manager** （**图形化**）、**virt-install**（**命令行模式**）和云计算框架平台（如OpenStack、ZStack、OpenNebula、Eucalyptus等）等都是**基于libvirt开发**而成的。
 
 libvirt是为了更方便地管理平台虚拟化技术而设计的开放源代码的应用程序接口、守护进程和管理工具，它不仅提供了对**虚拟化客户机的管理**，也提供了对**虚拟化网络和存储的管理！！！**。
+
+关于libvirt的官方描述如下。
+
+- libvirt 是一种为最新的 Linux（及其他操作系统）提供虚拟化功能的工具包。
+- libvirt是遵循GUN公共许可的免费软件。
+- libvirt是一种长期稳定的C语言API。
+- libvirt提供一组通用语言的绑定。
+- libvirt是一个DMTF（Distributed Management Task Force，分布式管理任务组）虚拟化模式的CIM（Computer Integrated Manufacturing，计算机集成制造）提供者。
+- libvirt是一个实现AMQP（Advanced Message Queuing Protocol，消息队列协议）/Qpid（AMQP 的一个实现）消息系统的 QMF（Query Management Facility，查询管理应用程序）代理。
 
 ## 1.1. 多种虚拟化方案支持
 
@@ -85,7 +97,15 @@ libvirt支持**多种虚拟化方案**，既支持包括**KVM**、**QEMU**、**X
 
 ## 1.2. LGPL许可证
 
-libvirt是一个免费的开源的软件，使用的许可证是LGPL￼（**GNU宽松的通用公共许可证**），使用libvirt库进行链接的软件程序**不一定要选择开源和遵守GPL许可证**。和KVM、Xen等开源项目类似，libvirt也有自己的开发者社区，而且随着虚拟化、云计算等成为近年来的技术热点，libvirt项目的社区也比较活跃。目前，libvirt的开发主要由Redhat公司作为强大的支持，由于Redhat公司在虚拟化方面逐渐偏向于支持KVM（而不是Xen），故libvirt对QEMU/KVM的支持是非常成熟和稳定的。当然，IBM、Novell等公司以及众多的个人开发者对libvirt项目的代码贡献量也是非常大的。
+libvirt是一个免费的开源的软件，使用的许可证是LGPL￼（**GNU宽松的通用公共许可证**），使用libvirt库进行链接的软件程序**不一定要选择开源和遵守GPL许可证**。
+
+## 开发者社区
+
+和KVM、Xen等开源项目类似，libvirt也有自己的**开发者社区**，而且随着虚拟化、云计算等成为近年来的技术热点，libvirt项目的社区也比较活跃。
+
+目前，libvirt的开发主要由Redhat公司作为强大的支持，由于Redhat公司在虚拟化方面逐渐偏向于支持KVM（而不是Xen），故libvirt对QEMU/KVM的支持是非常成熟和稳定的。
+
+当然，IBM、Novell等公司以及众多的个人开发者对libvirt项目的代码贡献量也是非常大的。
 
 ## 1.3. 编程语言支持
 
