--- Auto-Git Commit ---

--- a/Virtualization/QEMU/1. summary/2. QEMU组件.md
+++ b/Virtualization/QEMU/1. summary/2. QEMU组件.md
@@ -22,7 +22,13 @@
 
 # 1 模块模型
 
-与Linux内核一样，**QEMU的扩展组件**都以**模块方式**提供，模块主要分三种类型：**module\_block**、**module\_device** 和 **module\_machine**，分别代表**三种不同类型的功能模块**：**块设备模块**、**主机模块**和**设备模块**，这些模块的定义在**module.h**和**module.c**中，**不同类型的模块**为QEMU的内部提供**不同的功能服务**。
+与Linux内核一样，**QEMU的扩展组件**都以**模块方式**提供，模块主要分三种类型：
+
+- `module_block`, 块设备模块
+- `module_device`, 设备模块
+- `module_machine`，主机模块
+
+这些模块的定义在**module.h**和**module.c**中，**不同类型的模块**为QEMU的内部提供**不同的功能服务**。
 
 ## 1.1 块设备模块module_block
 
