--- a/Virtualization/QEMU/1. summary/2. QEMU组件.md
+++ b/Virtualization/QEMU/1. summary/2. QEMU组件.md
@@ -3,9 +3,9 @@
 
 <!-- code_chunk_output -->
 
-- [1 模块模型](#1-模块模型)
-  - [1.1 块设备模块module_block](#11-块设备模块module_block)
-  - [1.2 主机模块module_machine](#12-主机模块module_machine)
+- [模块模型](#模块模型)
+  - [块设备模块module_block](#块设备模块module_block)
+  - [主机模块module_machine](#主机模块module_machine)
   - [1.3 设备模块module_device](#13-设备模块module_device)
   - [1.4 模块之间的关系](#14-模块之间的关系)
   - [1.5 模块的初始化](#15-模块的初始化)
@@ -20,7 +20,7 @@
 
 <!-- /code_chunk_output -->
 
-# 1 模块模型
+# 模块模型
 
 与Linux内核一样，**QEMU的扩展组件**都以**模块方式**提供，模块主要分三种类型：
 
@@ -30,21 +30,21 @@
 
 这些模块的定义在**module.h**和**module.c**中，**不同类型的模块**为QEMU的内部提供**不同的功能服务**。
 
-## 1.1 块设备模块module_block
+## 块设备模块module_block
 
 **块设备模块**为QEMU提供**存储能力的支持**，支持包括**存储网络**、**磁盘分区**、**磁盘映像文件**等存储媒介的读/写，最终为所要模拟的平台提供一个**存储的块设备接口**。
 
 在块设备模块的帮助下，**QEMU**能够**读/写**多种虚拟化方案的**映像文件**，如VMware的**VMDK**、Virtual PC的**VPC**、**VDI**以及**DMG**等各种格式，而且根据这些开源代码所提供的接口，用户还可以**自行编写**所需要支持的映像文件格式。
 
-块设备模块的初始化标志为**MODULE\_INIT\_BLOCK**。
+块设备模块的初始化标志为`MODULE_INIT_BLOCK`。
 
-## 1.2 主机模块module_machine
+## 主机模块module_machine
 
 **主机模块**一般在QEMU的发行版本中**只有一个或者数个**，一般**一个主机模块**代表**一台完整的模拟系统**，如**一台PC**、**一块开发板**等。
 
 **主机模块**通过**下挂接总线**、**设备驱动**等，提供一个**待模拟的系统**所拥有的**所有硬件设备**. 
 
-machine模块的初始化标志为**MODULE\_INIT\_MACHINE**。
+machine模块的初始化标志为`MODULE_INIT_MACHINE`。
 
 ## 1.3 设备模块module_device
 
